jit status 命令完成